[gd_scene load_steps=12 format=1]

[ext_resource path="res://BaseMap.gd" type="Script" id=1]
[ext_resource path="res://hextiles.res" type="TileSet" id=2]
[ext_resource path="res://Home.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerBlue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dice.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assest/Images/btnDice.png" type="Texture" id=6]
[ext_resource path="res://Assest/Images/btnDice_Pressed.png" type="Texture" id=7]
[ext_resource path="res://Assest/Images/btnEndTurn.png" type="Texture" id=8]
[ext_resource path="res://Assest/Images/btnEndTurn_Clicked.png" type="Texture" id=9]
[ext_resource path="res://Assest/Images/hexagonSelected.png" type="Texture" id=10]
[ext_resource path="res://Assest/Music/bg_music1.ogg" type="AudioStream" id=11]

[node name="BaseMap" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 49 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 0, 0, 0 )
cell/half_offset = 0
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 131071, 0, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 131072, 0, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 262143, 0, 196608, 0, 196609, 0, 196610, 0, 196611, 1, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 262144, 0, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 393215, 0, 327680, 0, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 393216, 3, 393217, 3, 393218, 0, 393219, 3, 393220, 3, 393221, 3, 393222, 3, 393223, 0, 524287, 3, 458752, 0, 458753, 3, 458754, 3, 458755, 0, 458756, 0, 458757, 0, 458758, 3, 458759, 3, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 655359, 0, 589824, 0, 589825, 0, 589826, 0, 589827, 2, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 786431, 0, 720896, 0, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0 )

[node name="BlueHome" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 658, 538 )

[node name="RedHome" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 660, 100 )
playerColor = "red"

[node name="PlayerBlue1" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( -1.79364, 560.864 )
Direction = 5

[node name="PlayerBlue2" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 61.3644, 560.864 )
LabelText = "2"
Direction = 5

[node name="PlayerBlue3" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 122.306, 563.08 )
LabelText = "3"
Direction = 5

[node name="PlayerBlue4" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 381.586, 561.972 )
LabelText = "4"

[node name="PlayerBlue5" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 445.852, 563.08 )
LabelText = "5"

[node name="PlayerBlue6" parent="." groups=[
"player",
"blue",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 509.01, 560.864 )
LabelText = "6"

[node name="PlayerRed1" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 3.75824, 74.0721 )
PlayerColor = "Red"
Direction = 3

[node name="PlayerRed6" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 130.897, 72.5648 )
LabelText = "3"
PlayerColor = "Red"
Direction = 3

[node name="PlayerRed5" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 65.5591, 72.5648 )
LabelText = "2"
PlayerColor = "Red"
Direction = 3

[node name="PlayerRed2" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 514.562, 71.856 )
LabelText = "6"
PlayerColor = "Red"
Direction = 2

[node name="PlayerRed3" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 452.761, 71.856 )
LabelText = "5"
PlayerColor = "Red"
Direction = 2

[node name="PlayerRed4" parent="." groups=[
"player",
"red",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 384.931, 73.3634 )
LabelText = "4"
PlayerColor = "Red"
Direction = 2

[node name="Dice1" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 653.494, 245.823 )

[node name="Dice2" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 653.494, 316.668 )

[node name="Dice3" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 653.494, 389.021 )

[node name="RollDice" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 584.0
margin/top = 169.0
margin/right = 729.0
margin/bottom = 209.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="EndTurn" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 581.0
margin/top = 429.0
margin/right = 726.0
margin/bottom = 469.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="selection" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 897.137, 325.464 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 456.687, 311.274 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="RollDice" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]


